bug fixed in row alignfull issue and videoPopup ripple effect

--- a/assets/reactjs/src/blocks/row/style.scss
+++ b/assets/reactjs/src/blocks/row/style.scss
@@ -1,8 +1,8 @@
 .qubely-section {
     position: relative;
-    &.alignfull {
-        margin: 0 !important;
-    }
+    // &.alignfull {
+    //     margin: 0 !important;
+    // }
     .qubely-container{
         position: relative;
         @media only screen and (max-width: 991px) {
